--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
 google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
+disqus: 'wdevops'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
@@ -21,7 +21,7 @@ authors:
     email: me@sangram.pro
     web: https://www.sangram.pro
     twitter: https://twitter.com/sangram_pro
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    description: "Entrepreneur"
   
 # Plugins
 plugins:
