--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'WDevops'
 description: 'Share and Grow...'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: '/'
+baseurl: ''
 disqus: 'wdevops'
 email: 'me@sangram.pro'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
