--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: 'assets/images/favicon.ico'
 baseurl: ''
 disqus: 'wdevops'
 email: 'me@sangram.pro'
-# mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+# mailchimp-list: 'https://Ambivert.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 
 include: ["_pages"]
 permalink: /:title/
@@ -23,7 +23,7 @@ authors:
       name:           Sangram
       site:           https://www.wdevops.com
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
+      bio:            "Hi, I am Sal, the author of Ambivert Technologies Private Limited, the theme you're currently previewing. I hope you like it!"
       email:          me@sangram.pro
       twitter:        https://twitter.com/sangram_pro
 
