--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ authors:
     Sangram:
       name:           Sangram
       site:           https://www.wdevops.com
-      avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Ambivert Technologies Private Limited, the theme you're currently previewing. I hope you like it!"
+      avatar:         /assets/images/avatar1.png
+      bio:            "Hi, I am Sangram, the author of WDevops.com I hope you like it!"
       email:          me@sangram.pro
       twitter:        https://twitter.com/sangram_pro
 
