--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ defaults:
     values:
       layout: post
       author: Sangram
-      avatar: /assets/images/avatar1.jpg
+      avatar: assets/images/avatar1.jpg
       
   # all pages
   - scope:
