--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:
 authors:
     Sangram:
       name:           Sangram
-      site:           https://www.wdevops.com
+      site:           https://www.sangram.pro
       avatar:         assets/images/avatar1.jpg
       bio:            "Hi, I am Sangram, the author of WDevops.com I hope you like it!"
       email:          me@sangram.pro
