--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'WDevops'
-description: 'Share and Grow...'
+description: 'Free Developer Resources and updates for Tech Startups to build their MVP or prototypes. Share and Grow...'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
