--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ plugins:
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-language-plugin
-  
+  - jekyll-redirect-from
+
 authors:
     Sangram:
       name:           Sangram
@@ -52,7 +53,9 @@ highlighter: rouge
 # Paginate
 paginate: 10
 
-
+redirect_from:
+  - /tag/
+  - /
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
