--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,9 @@ redirect_from:
   redirect_to: /
   permalink: /free-for-developers/
   redirect_to: /categories.html#developer/
-
+  permalink: /python-command-line-tools/
+  redirect_to: /
+  
+  
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
