--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Site
-name: 'The WDevops | Tech Hub'
+name: 'The WDevops'
 description: 'Free Developer Resources and updates for Tech Startups to build their MVP or prototypes. Promoting awesome work by awesome people. Share and Grow...'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
+url: 'https://wdevops.com/'
 disqus: 'wdevops'
 email: 'me@sangram.pro'
 # mailchimp-list: 'https://Ambivert.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
