--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: The Wdevops
 email: me@sangram.pro
 description: >
-  Free Developer Resources and updates for Tech Startups to build their MVP or prototypes. Promoting awesome work by awesome people. Share and Grow...
+  Relevent to Tech! Share and Grow...
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wdevops.com" # the base hostname & protocol for your site
