--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: The Wdevops
 email: me@sangram.pro
 description: >
-  Relevent to Tech! Share and Grow...
+  Relevent to Tech! The Developer Resources HUB. Share and Grow...
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wdevops.com" # the base hostname & protocol for your site
