--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,9 @@ logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wdevops.com" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
-
+plugins:
+  - jekyll-sitemap
+  
 name: 'Sangram Chavan'
 bio: >
   Hi, I am Sangram Chavan, Entrepreneur and author of this website.
